--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ server:
 #spring.datasource
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/student_manage?useUnicode=true&characterEncoding=UTF-8&useSSL=false
+    url: jdbc:mysql://localhost:3306/student_manage?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC
     username: root
     password: mysql
     sql-script-encoding: utf-8
