--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,7 @@
         </dependency>
     </dependencies>
     <build>
+        <finalName>grade</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
