--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 #server
 server:
-  port: 8080
+  port: 8090
   tomcat.uri-encoding: UTF-8
   servlet:
     context-path: /grade
@@ -8,6 +8,10 @@ server:
       timeout: 60m
 #spring.datasource
 spring:
+#  security:
+#    user:
+#      name: chad
+#      password: 123456
   datasource:
     url: jdbc:mysql://localhost:3306/student_manage?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC
     username: root
